--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #0f1115;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,17 +17,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.progress-container {
-  position: sticky;
-  top: 0;
-  width: 4px;
-  height: 100%;
-}
-
-.progress-bar {
-  transform-origin: top;
-  transition: scaleY 0.3s ease-out;
+  font-family: Arial, Gabarito, sans-serif;
 }
